[package]
name = "trivia-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
#version = "0.10.8"
default-features = false
features = ["builder", "cache", "client", "collector", "gateway", "http", "utils", "model", "rustls_backend", "unstable_discord_api"]
git = "https://github.com/HarmoGlace/serenity"
branch = "clarify-slash-commands"